# vectype

./: .gitignore  CMakeLists.txt  Geometry.cpp  Geometry.hpp  LICENSE  Preprocess.cpp  Preprocess.hpp  README.md  main.cpp
shaders/: glyph.frag  glyph.vert
